tests/dataset/tpc-ds/compiler/c/q53.c
// Generated by Mochi compiler v0.10.26 on 2025-07-15T06:30:42Z
// Generated by Mochi compiler v0.10.26 on 2025-07-15T06:30:42Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static void _json_int(int v) { printf("%d", v); }
static void _json_float(double v) { printf("%g", v); }
static void _json_string(char *s) { printf("\"%s\"", s); }
static void _json_list_int(list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_int(v.data[i]);
  }
  printf("]");
}
static void _json_list_float(list_float v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_float(v.data[i]);
  }
  printf("]");
}
static void _json_list_string(list_string v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_string(v.data[i]);
  }
  printf("]");
}
static void _json_list_list_int(list_list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_list_int(v.data[i]);
  }
  printf("]");
}
typedef struct {
  int i_manufact_id;
  double sum_sales;
} tmp1_t;
typedef struct {
  int len;
  tmp1_t *data;
} tmp1_list_t;
tmp1_list_t create_tmp1_list(int len) {
  tmp1_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp1_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int i_manufact_id;
  double sum_sales;
} tmp_item_t;
typedef struct {
  int len;
  tmp_item_t *data;
} tmp_item_list_t;
tmp_item_list_t create_tmp_item_list(int len) {
  tmp_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int i_item_sk;
  int i_manufact_id;
} item_t;
typedef struct {
  int len;
  item_t *data;
} item_list_t;
item_list_t create_item_list(int len) {
  item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int item;
  int date;
  double price;
} store_sale_t;
typedef struct {
  int len;
  store_sale_t *data;
} store_sale_list_t;
store_sale_list_t create_store_sale_list(int len) {
  store_sale_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(store_sale_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int d_date_sk;
  int d_month_seq;
} date_dim_t;
typedef struct {
  int len;
  date_dim_t *data;
} date_dim_list_t;
date_dim_list_t create_date_dim_list(int len) {
  date_dim_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(date_dim_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int manu;
  double sum_sales;
  double avg_sales;
} grouped_item_t;
typedef struct {
  int len;
  grouped_item_t *data;
} grouped_item_list_t;
grouped_item_list_t create_grouped_item_list(int len) {
  grouped_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(grouped_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int i_manufact_id;
  double sum_sales;
} result_item_t;
typedef struct {
  int len;
  result_item_t *data;
} result_item_list_t;
result_item_list_t create_result_item_list(int len) {
  result_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(result_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

double abs(double x) {
  if (x >= 0.0) {
    return x;
  }
  return (-x);
}

static list_int test_TPCDS_Q53_simplified_result;
static void test_TPCDS_Q53_simplified() {
  tmp1_t tmp1[] = {(tmp1_t){.i_manufact_id = 1, .sum_sales = 20.0},
                   (tmp_item_t){.i_manufact_id = 2, .sum_sales = 53.0}};
  int tmp1_len = sizeof(tmp1) / sizeof(tmp1[0]);
  int tmp2 = 1;
  if (test_TPCDS_Q53_simplified_result.len != tmp1.len) {
    tmp2 = 0;
  } else {
    for (int i3 = 0; i3 < test_TPCDS_Q53_simplified_result.len; i3++) {
      if (test_TPCDS_Q53_simplified_result.data[i3] != tmp1.data[i3]) {
        tmp2 = 0;
        break;
      }
    }
  }
  if (!(tmp2)) {
    fprintf(stderr, "expect failed\n");
    exit(1);
  }
}

int main() {
  item_t item[] = {(item_t){.i_item_sk = 1, .i_manufact_id = 1},
                   (item_t){.i_item_sk = 2, .i_manufact_id = 2}};
  int item_len = sizeof(item) / sizeof(item[0]);
  store_sale_t store_sales[] = {
      (store_sale_t){.item = 1, .date = 1, .price = 10.0},
      (store_sale_t){.item = 1, .date = 2, .price = 10.0},
      (store_sale_t){.item = 2, .date = 1, .price = 30.0},
      (store_sale_t){.item = 2, .date = 2, .price = 23.0}};
  int store_sales_len = sizeof(store_sales) / sizeof(store_sales[0]);
  date_dim_t date_dim[] = {(date_dim_t){.d_date_sk = 1, .d_month_seq = 1},
                           (date_dim_t){.d_date_sk = 2, .d_month_seq = 2}};
  int date_dim_len = sizeof(date_dim) / sizeof(date_dim[0]);
  grouped_item_list_t grouped = (grouped_item_list_t){0, NULL};
  result_item_list_t tmp4 = create_result_item_list(grouped.len);
  int tmp5 = 0;
  for (int tmp6 = 0; tmp6 < grouped.len; tmp6++) {
    grouped_item_t g = grouped.data[tmp6];
    if (!(g.avg_sales > 0.0 &&
          abs(g.sum_sales - g.avg_sales) / g.avg_sales > 0.1)) {
      continue;
    }
    tmp4.data[tmp5] =
        (result_item_t){.i_manufact_id = g.manu, .sum_sales = g.sum_sales};
    tmp5++;
  }
  tmp4.len = tmp5;
  result_item_list_t result = tmp4;
  printf("[");
  for (int i7 = 0; i7 < result.len; i7++) {
    if (i7 > 0)
      printf(",");
    result_item_t it = result.data[i7];
    printf("{");
    _json_string("i_manufact_id");
    printf(":");
    _json_int(it.i_manufact_id);
    printf(",");
    _json_string("sum_sales");
    printf(":");
    _json_float(it.sum_sales);
    printf("}");
  }
  printf("]");
  test_TPCDS_Q53_simplified_result = result;
  test_TPCDS_Q53_simplified();
  free(result.data);
  return 0;
}
